--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "mitt": "^2.1.0",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.2"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
